@@ -78,6 +78,7 @@ Version 1.5
  - Pull Request #929 - Update manufacturer_specific.xml from saintman23 (Nechry)
  - Pull Request #930 - Update manufacturer_specific.xml from saintman23 (Nechry)
  - Pull Request #934 - Manufacturer ID for AU NZ update from Dilepa (Nechry)
+ - Issue #935 - Qubino zmnhvd1 / Zmnhvd* not supported from machielw (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
